fix spacing in form change opacity of contact details

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,7 +8,6 @@
     --theme2-color: #a50021;
     --highlight-color: #86cb9c;
 }
-
 * {
     margin: 0;
     padding: 0;
@@ -17,6 +16,9 @@
     -webkit-box-sizing: border-box;
     -o-box-sizing: border-box;
     font-family: 'Delius', "Papyrus", "cursive";
+}
+.opacity-text {
+    color: rgba(12, 12, 12, 0.7)
 }
 
 body {
@@ -134,6 +136,11 @@ a {
 .spacer {
     height: 2rem;
 }
+
+.spacer.contact-one {
+    height: 3rem;
+}
+
 .mockup-container {
     position: absolute;
     left: 5rem;
